--- a/pyproject.toml
+++ b/pyproject.toml
@@ -27,6 +27,7 @@ torchmetrics = "^0.6.0"
 optuna = "^2.10.0"
 torchinfo = "^1.5.3"
 einops = "^0.3.2"
+nfnets-pytorch = "^0.1.3"
 # Logging
 loguru = "^0.5.3"
 mlflow = "^1.21.0"
