--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,8 @@ include = ["LICENSE"]
 
 [tool.poetry.dependencies]
 python = ">=3.9,<3.10"
+# Datasets
+medmnist = "^2.0.2"
 # ML
 numpy = "^1.21.3"
 pandas = "^1.3.4"
