--- a/pyproject.toml
+++ b/pyproject.toml
@@ -43,6 +43,7 @@ streamlit = "^1.1.0"
 altair = "^4.1.0"
 # Util
 python-dotenv = "^0.19.1"
+self-supervised = "^1.0.3"
 
 [tool.poetry.dev-dependencies]
 black = "^21.8b0"
