--- a/ophthalmology/conf/ssl_config.yaml
+++ b/ophthalmology/conf/ssl_config.yaml
@@ -5,9 +5,9 @@ defaults:
   - _self_
   - trainer: default
   - lightning_module: simclr
-  - model: attentive_nf_resnet_backbone
+  - model: resnet
   - transforms: weak
-  - datamodule: wisar_simclr
+  - datamodule: ssl_diabetic_retinopathy
   - callbacks: none
   - logger: mlflow
 
@@ -16,17 +16,10 @@ defaults:
   - override hydra/hydra_logging: colorlog
   - override hydra/job_logging: colorlog
 
+  - environment: local
+
 # seed for the random number generators
 seed: 42
-
-# path to original working directory
-# hydra hijacks working directory by changing it to the current log directory,
-# so it's useful to have this path as a special variable
-# learn more here: https://hydra.cc/docs/next/tutorials/basic/running_your_app/working_directory
-work_dir: ${hydra:runtime.cwd}
-
-# path to folder with data
-data_dir: ${work_dir}/data
 
 # print config at the start of the run
 print_config: True
