--- a/ophthalmology/conf/model/resnet.yaml
+++ b/ophthalmology/conf/model/resnet.yaml
@@ -1,5 +1,4 @@
-_target_: pl_bolts.utils.self_supervised.torchvision_ssl_encoder
+_target_: ophthalmology.models.resnet.ResNetBackbone
 
-_args_:
-  name: resnet50
-  pretrained: False
+name: resnet50
+pretrained: False
