--- a/ophthalmology/conf/transforms/strong.yaml
+++ b/ophthalmology/conf/transforms/strong.yaml
@@ -1,8 +1,8 @@
-- _target_: group7.layers.noise.RandomMeanOffset
+- _target_: ophthalmology.layers.noise.RandomMeanOffset
   std: 0.1
 - _target_: torchvision.transforms.RandomHorizontalFlip
 - _target_: torchvision.transforms.RandomVerticalFlip
-- _target_: group7.layers.noise.RandomGaussianNoise
+- _target_: ophthalmology.layers.noise.RandomGaussianNoise
   var: 0.2
   apply_prob: 0.3
 - _target_: torchvision.transforms.RandomResizedCrop
