--- a/ophthalmology/conf/transforms/weak.yaml
+++ b/ophthalmology/conf/transforms/weak.yaml
@@ -1,6 +1,6 @@
 - _target_: torchvision.transforms.RandomHorizontalFlip
 - _target_: torchvision.transforms.RandomVerticalFlip
-- _target_: group7.layers.noise.RandomGaussianNoise
+- _target_: ophthalmology.layers.noise.RandomGaussianNoise
   var: 0.025
   apply_prob: 0.25
 - _target_: torchvision.transforms.RandomRotation
