--- a/ophthalmology/conf/transforms/strong.yaml
+++ b/ophthalmology/conf/transforms/strong.yaml
@@ -1,21 +1,26 @@
-- _target_: ophthalmology.layers.noise.RandomMeanOffset
-  std: 0.1
-- _target_: torchvision.transforms.RandomHorizontalFlip
-- _target_: torchvision.transforms.RandomVerticalFlip
-- _target_: ophthalmology.layers.noise.RandomGaussianNoise
-  var: 0.2
-  apply_prob: 0.3
-- _target_: torchvision.transforms.RandomResizedCrop
-  size: ${datamodule.image_size}
-  scale: [0.75, 1.0]
-  ratio: [0.9, 1.1]
-- _target_: torchvision.transforms.RandomRotation
-  _args_:
-    - 180
-- _target_: torchvision.transforms.GaussianBlur
-  _args_:
-    - 3
-    - [0.001, 0.7]
-- _target_: torchvision.transforms.RandomPerspective
-  distortion_scale: 0.1
-  p: 0.2
+_recursive_: True
+_convert_: partial
+_target_: torchvision.transforms.Compose
+_args_:
+  -
+    - _target_: ophthalmology.layers.noise.RandomMeanOffset
+      std: 0.1
+    - _target_: torchvision.transforms.RandomHorizontalFlip
+    - _target_: torchvision.transforms.RandomVerticalFlip
+    - _target_: ophthalmology.layers.noise.RandomGaussianNoise
+      var: 0.2
+      apply_prob: 0.3
+    - _target_: torchvision.transforms.RandomResizedCrop
+      size: ${datamodule.image_size}
+      scale: [0.75, 1.0]
+      ratio: [0.9, 1.1]
+    - _target_: torchvision.transforms.RandomRotation
+      _args_:
+        - 180
+    - _target_: torchvision.transforms.GaussianBlur
+      _args_:
+        - 3
+        - [0.001, 0.7]
+    - _target_: torchvision.transforms.RandomPerspective
+      distortion_scale: 0.1
+      p: 0.2
