--- a/ophthalmology/conf/transforms/weak.yaml
+++ b/ophthalmology/conf/transforms/weak.yaml
@@ -1,12 +1,17 @@
-- _target_: torchvision.transforms.RandomHorizontalFlip
-- _target_: torchvision.transforms.RandomVerticalFlip
-- _target_: ophthalmology.layers.noise.RandomGaussianNoise
-  var: 0.025
-  apply_prob: 0.25
-- _target_: torchvision.transforms.RandomRotation
-  _args_:
-    - 180
-- _target_: torchvision.transforms.GaussianBlur
-  _args_:
-    - 3
-    - [0.0001, 0.2]
+_recursive_: True
+_convert_: partial
+_target_: torchvision.transforms.Compose
+_args_:
+  -
+    - _target_: torchvision.transforms.RandomHorizontalFlip
+    - _target_: torchvision.transforms.RandomVerticalFlip
+    - _target_: ophthalmology.layers.noise.RandomGaussianNoise
+      var: 0.025
+      apply_prob: 0.25
+    - _target_: torchvision.transforms.RandomRotation
+      _args_:
+        - 180
+    - _target_: torchvision.transforms.GaussianBlur
+      _args_:
+        - 3
+        - [0.0001, 0.2]
