--- a/ophthalmology/conf/trainer/default.yaml
+++ b/ophthalmology/conf/trainer/default.yaml
@@ -2,7 +2,7 @@ _target_: pytorch_lightning.Trainer
 
 # set `1` to train on GPU, `0` to train on CPU only
 gpus: 1
-deterministic: True
+deterministic: False
 min_epochs: 1
 max_epochs: 32
 log_every_n_steps: 1
