modified configuration to account for default experiment setups; added docs/commands.md

--- a/ophthalmology/conf/datamodule/diabetic_retinopathy.yaml
+++ b/ophthalmology/conf/datamodule/diabetic_retinopathy.yaml
@@ -6,5 +6,6 @@ csv_file_test: ${environment.datadir}/diabetic-retinopathy-detection/test_labels
 
 train_test_split: 0.9
 batch_size: 64
+pin_memory: True
 num_workers: 1
 seed: ${seed}
