--- a/ophthalmology/conf/model/resnet18.yaml
+++ b/ophthalmology/conf/model/resnet18.yaml
@@ -1,5 +1,6 @@
 _target_: ophthalmology.models.resnet.ResNet
 
-name: resnet50
+name: resnet18
 num_output_units: 5
+num_resnet_features: 512
 pretrained: False
