added default experiment names to base configs to reduce CLI argument count

--- a/ophthalmology/conf/disease_grading_config.yaml
+++ b/ophthalmology/conf/disease_grading_config.yaml
@@ -18,6 +18,9 @@ defaults:
   - override hydra/hydra_logging: colorlog
   - override hydra/job_logging: colorlog
 
+logger:
+  experiment_name: disease_grading
+
 # seed for the random number generators
 seed: 42
 
