--- a/ophthalmology/conf/ssl_config.yaml
+++ b/ophthalmology/conf/ssl_config.yaml
@@ -18,6 +18,9 @@ defaults:
   - override hydra/hydra_logging: colorlog
   - override hydra/job_logging: colorlog
 
+logger:
+  experiment_name: simclr
+
 # seed for the random number generators
 seed: 42
 
