added class balancing option; prepared new experiments

--- a/ophthalmology/conf/model/resnet18.yaml
+++ b/ophthalmology/conf/model/resnet18.yaml
@@ -3,4 +3,4 @@ _target_: ophthalmology.models.resnet.ResNet
 name: resnet18
 num_output_units: 5
 num_resnet_features: 512
-pretrained: False
+pretrained: True
