--- a/ophthalmology/conf/disease_grading_config.yaml
+++ b/ophthalmology/conf/disease_grading_config.yaml
@@ -4,8 +4,8 @@
 defaults:
   - _self_
   - trainer: default
-  - lightning_module: disease_grading
   - lightning_module/loss: cross_entropy
+  - lightning_module: disease_grading_classification
   - model: resnet50
   - transforms@train_transforms: strong
   - transforms@image_transforms: resize_normalize
