--- a/ophthalmology/conf/localization_config.yaml
+++ b/ophthalmology/conf/localization_config.yaml
@@ -3,12 +3,12 @@
 # specify here default training configuration
 defaults:
   - trainer: default
-  - lightning_module/loss: cross_entropy
-  - lightning_module: disease_grading_classification
+  - lightning_module/loss: mse
+  - lightning_module: localization
   - model: resnet50
   - transforms@train_transforms: strong
   - transforms@image_transforms: resize_normalize
-  - datamodule: diabetic_retinopathy
+  - datamodule: indian_diabetic_retinopathy_localization
   - callbacks: none
   - logger: mlflow
 
@@ -21,7 +21,10 @@ defaults:
   - _self_
 
 logger:
-  experiment_name: disease_grading
+  experiment_name: localization
+
+model:
+  num_output_units: 4
 
 # seed for the random number generators
 seed: 42
