--- a/ophthalmology/conf/train_config.yaml
+++ b/ophthalmology/conf/train_config.yaml
@@ -7,6 +7,7 @@ defaults:
   - lightning_module/loss: cross_entropy
   - lightning_module: disease_grading_classification
   - model: resnet50
+  - head: null
   - transforms@train_transforms: strong
   - transforms@image_transforms: resize_normalize
   - datamodule: diabetic_retinopathy
