added dataset documentation; started work on two analysis scripts

--- a/ophthalmology/conf/pre_train_config.yaml
+++ b/ophthalmology/conf/pre_train_config.yaml
@@ -12,7 +12,7 @@ defaults:
   - callbacks: none
   - logger: mlflow
 
-  - hydra: default
+  - hydra: mlflow
   - environment: local
   # enable color logging
   - override hydra/hydra_logging: colorlog
