--- a/ophthalmology/conf/pre_train_config.yaml
+++ b/ophthalmology/conf/pre_train_config.yaml
@@ -11,15 +11,13 @@ defaults:
   - datamodule: ssl_diabetic_retinopathy
   - callbacks: none
   - logger: mlflow
+  - experiment: simclr_drd
 
   - hydra: mlflow
   - environment: local
   # enable color logging
   - override hydra/hydra_logging: colorlog
   - override hydra/job_logging: colorlog
-
-logger:
-  experiment_name: simclr
 
 # seed for the random number generators
 seed: 42
