--- a/ophthalmology/conf/experiment/ft_drd_grading.yaml
+++ b/ophthalmology/conf/experiment/ft_drd_grading.yaml
@@ -22,6 +22,6 @@ freeze_backbone: True
 trainer:
   max_epochs: 64
 
-load_model: "registry/pytorch/pretrained_resnet50backbone_256image_balanced_strong_aug.pt"
+load_model: "registry/pytorch/pretrained_resnet50backbone_256image_balanced_strong_aug_64_epochs"
 
 save_model: "ft_drd_grading.pt"
