--- a/ophthalmology/conf/experiment/ft_mnist_grading.yaml
+++ b/ophthalmology/conf/experiment/ft_mnist_grading.yaml
@@ -26,6 +26,6 @@ image_size: 56
 trainer:
   max_epochs: 320
 
-load_model: "registry/pytorch/pretrained_resnet50backbone_256image_balanced_strong_aug.pt"
+load_model: "registry/pytorch/pretrained_resnet50backbone_256image_balanced_strong_aug_64_epochs"
 
 save_model: "ft_mnist_grading.pt"
